--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1390,7 +1390,7 @@ html {
 
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.42857143;
     color: #333;
     background-color: #fff
@@ -2617,9 +2617,10 @@ pre code {
     .col-md-offset-3 {
         margin-left: 25%
     }
+    /*
     .col-md-offset-2 {
         margin-left: 16.66666667%
-    }
+    }*/
     .col-md-offset-1 {
         margin-left: 8.33333333%
     }
@@ -7685,7 +7686,7 @@ button.close {
     background-color: #000\9;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
-    border-radius: 10px
+    border-radius: 10px;
 }
 
 .carousel-indicators .active {
