--- a/style.css
+++ b/style.css
@@ -677,7 +677,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 16px;
 }
 
 .tight-width-whitespace {
@@ -710,7 +710,7 @@ h2 {
 }
 
 h3 {
-    font-size: 15px;
+    font-size: 17px;
     text-transform: uppercase;
     font-weight: 700;
     color: #333333!important;
@@ -720,6 +720,7 @@ h3 {
     max-width: 800px;
     margin: auto auto auto auto;
     box-shadow: 0px 0px 0px #000000;
+    margin-top: 30px;
 }
 
 h1 {
@@ -775,7 +776,8 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    /*color: #F3976C!important;*/
+    color: white !important;
 }
 
 .btn-atomic-tangerine {
@@ -1026,6 +1028,10 @@ h4 {
         width: 180px;
         height: 320px;
     }
+
+    .largest {
+        margin-top: 30px !important;
+    }
 }
 
 @media (max-width: 400px) {
@@ -1039,4 +1045,45 @@ h4 {
     .bloc-mob-center-text {
         text-align: center;
     }
+}
+
+/* Amelioration site */
+
+.centre{
+    display: flex;
+    justify-content: center
+}
+
+.titre{
+    font-weight: bold;
+    width: 639px;
+    font-size: 22px;
+}
+
+.titlesize{
+    font-size: 16px;
+}
+
+
+.parasize{
+    font-size: 15px;
+}
+
+.largest{
+    width: 510px;
+}
+
+.sitation{
+    font-size: 18px;
+    font-style: italic;
+    margin-bottom: 0;
+    font-weight: 600;
+}
+
+.otor{
+    font-size: 18px;
+}
+
+.meet{
+    font-size: 19px;
 }
