--- a/style.css
+++ b/style.css
@@ -1033,6 +1033,10 @@ h4 {
     .largest {
         margin-top: 30px !important;
     }
+
+    .pix{
+        margin-bottom: 30px !important;
+    }
 }
 
 @media (max-width: 400px) {
