--- a/style.css
+++ b/style.css
@@ -907,6 +907,7 @@ h4 {
     #disqus_thread {
         padding-left: 10px!important;
         padding-right: 10px!important;
+        bottom: -10px !important;
     }
     .b-parallax {
         background-attachment: scroll;
