--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    /*background: url("img/texture-paper.png");*/
     background-size: 280px 280px;
 }
 
@@ -769,7 +769,7 @@ h4 {
 }
 
 .bgc-dark-slate-blue {
-    background-color: #364577;
+    /*background-color: #364577;*/
 }
 
 .bgc-atomic-tangerine {
@@ -1091,6 +1091,9 @@ h4 {
 }
 
 .meet{
-    font-size: 19px;
+    font-size: 17px;
 }
 
+.bold{
+    font-weight: bold;
+}
